--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -3,3 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+@mixin img-position {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
