--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,4 @@
 $fontLato: "Lato", sans-serif;
 $container-max-widths: 1200px;
+$mainColor: rgb(1.998901%, 62.69989%, 72.898865%);
+$backgroundColor: #f8f9fd;
