show_cards_on_bord

--- a/src/scss/_formVisit.scss
+++ b/src/scss/_formVisit.scss
@@ -38,7 +38,7 @@
 
 .doctors-box {
   text-align: center;
-  background-color: rgba(72, 255, 0, 0.199);
+  background-color: rgb(198, 255, 176);
   position: absolute;
   min-width: 350px;
   top: 30%;
