--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,7 +17,7 @@ body {
 }
 .section {
   background-color: whitesmoke;
-  height: 100vh;
+  // height: 100vh;
   box-shadow: 0px 0px 12px 2px #313131;
   margin: 0 auto;
   box-sizing: border-box;
@@ -29,5 +29,6 @@ body {
 @import "header";
 @import "form";
 @import "formLogIn";
+@import "mainContent";
 @import "media-481";
 @import "media-993";
