--- a/src/scss/_media-993.scss
+++ b/src/scss/_media-993.scss
@@ -1,5 +1,22 @@
 @media screen and (min-width: 993px) {
   @import "mixins";
   @import "variables";
-  //--------------------HEADER--------------------//
+
+  .main-box {
+    background-image: url(../images/doctor-with-medical-mask-background-vector.jpeg);
+    @include img-position;
+    height: calc(100vh - 126.66px);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .filter {
+      width: 200px;
+      .filter-box {
+        display: block;
+      }
+      .btn {
+        display: none;
+      }
+    }
+  }
 }
