doctor filter upd

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,7 +25,7 @@ body {
 @import "form";
 @import "formLogIn";
 @import "mainContent";
-@import "radio";
+@import "checkbox";
 @import "filter";
 @import "media-481";
 @import "media-993";
