--- a/src/scss/_media-993.scss
+++ b/src/scss/_media-993.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+
     .filter {
       width: 200px;
       .filter-box {
@@ -18,5 +19,8 @@
         display: none;
       }
     }
+  }
+  .section-width {
+    display: flex;
   }
 }
