some styles for filter and doctor-box

--- a/src/scss/_media-993.scss
+++ b/src/scss/_media-993.scss
@@ -12,11 +12,16 @@
 
     .filter {
       width: 200px;
+      // height: calc(100vh - 126.66px);
       .filter-box {
         display: block;
       }
       .btn {
         display: none;
+      }
+
+      .name-pacient__input-search {
+        width: 100%;
       }
     }
   }
