--- a/src/scss/_formVisit.scss
+++ b/src/scss/_formVisit.scss
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 2px solid transparent;
+  transition: 0.3s;
 
   &::after {
     right: 0;
@@ -15,12 +17,15 @@
     content: "▼";
     font-size: 25px;
   }
+
+  &:hover {
+    border: 2px solid rgba(44, 43, 44, 0.979);
+  }
 }
 
 .select-list-doctors {
   list-style: none;
   margin: 0;
-  margin-top: 10px;
   background: $mainColor;
   display: none;
   font-size: 25px;
@@ -43,11 +48,11 @@
 
 .doctors-box {
   text-align: center;
-  background-color: #fff;
+  background-color: rgba(226, 212, 212, 0.87);
   max-width: 500px;
   min-width: 320px;
   position: absolute;
-  top: 40%;
+  top: 0;
 }
 
 .check-inputs-value,
