--- a/src/scss/_filter.scss
+++ b/src/scss/_filter.scss
@@ -1,6 +1,12 @@
 .filter {
   padding: 20px;
   background-color: #fff;
+  &__id {
+    padding-top: 10px;
+    &__title {
+      padding-bottom: 10px;
+    }
+  }
 
   .btn {
     background-color: #000;
