--- a/src/scss/_mainContent.scss
+++ b/src/scss/_mainContent.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   flex-direction: row;
+  min-height: 226px;
 }
 .visit-card-element {
   position: relative;
