--- a/src/scss/_media-481.scss
+++ b/src/scss/_media-481.scss
@@ -18,4 +18,13 @@
       }
     }
   }
+  .filter {
+    .filter-box {
+      &--grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 20px;
+      }
+    }
+  }
 }
